# src/Umbraco.Cms.Api.Management/ViewModels/Language/LanguageCreateModel.cs
@@ -1,6 +1,6 @@
 ﻿namespace Umbraco.Cms.Api.Management.ViewModels.Language;
 
-public class LanguageViewModel : LanguageModelBase
+public class LanguageCreateModel : LanguageModelBase
 {
     public string IsoCode { get; set; } = string.Empty;
 }
