# src/Umbraco.Cms.Api.Management/ViewModels/Language/LanguageUpdateModel.cs
@@ -1,0 +1,5 @@
+﻿namespace Umbraco.Cms.Api.Management.ViewModels.Language;
+
+public class LanguageUpdateModel : LanguageModelBase
+{
+}
